--- a/res/layout/shortcut.xml
+++ b/res/layout/shortcut.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,4 +14,56 @@
         android:layout_height="fill_parent"
  />
 
-</LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" 
+        android:layout_gravity="center"
+        >
+
+        <Button
+            android:id="@+id/buttonShortCutOk"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="@string/shortcut_m"
+            android:visibility="visible" />
+
+        <Button
+            android:id="@+id/buttonShortCutLeft"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/buttonShortCutOk"
+            android:layout_alignBottom="@+id/buttonShortCutOk"
+            android:layout_toLeftOf="@+id/buttonShortCutOk"
+            android:text="@string/shortcut_left" />
+
+        <Button
+            android:id="@+id/buttonShortCutUp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/buttonShortCutOk"
+            android:layout_toRightOf="@+id/buttonShortCutLeft"
+            android:text="@string/shortcut_up" />
+
+        <Button
+            android:id="@+id/buttonShortCutDown"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/buttonShortCutOk"
+            android:layout_below="@+id/buttonShortCutOk"
+            android:text="@string/shortcut_down" />
+
+        <Button
+            android:id="@+id/buttonShortCutRight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+                     android:layout_alignBaseline="@+id/buttonShortCutOk"
+            android:layout_alignBottom="@+id/buttonShortCutOk"
+            android:layout_toRightOf="@+id/buttonShortCutOk"
+
+            android:text="@string/shortcut_right" />
+
+    </RelativeLayout>
+
+</FrameLayout>
