--- a/res/layout/file_adapter.xml
+++ b/res/layout/file_adapter.xml
@@ -13,12 +13,16 @@
         android:id="@+id/imageViewFileIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/ic_launcher" 
+     	android:layout_gravity="center_vertical"
+        />
 
     <TextView
         android:id="@+id/textFileName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="24dp"
+android:layout_gravity="center_vertical"
         android:text="TextView" />
 
 </LinearLayout>
